Add post from Romain

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,12 @@ authors:
     github: tlrx
     gravatar: 
     email: 
+  filirom1:
+    fullname: Romain Philibert
+    twitter: Filirom1
+    github: Filirom1
+    gravatar: 6ac6a4f3b7b0c17631f967054ef6a194
+    email:    
 navigation:
   Elasticsearch:
     Accueil:
