Remove eclipse file

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,4 +7,6 @@ encoding//blog/_posts/2012-08-30-es-france.md=UTF-8
 encoding/<project>=UTF-8
 encoding/authors.html=UTF-8
 encoding/index.html=UTF-8
+encoding/joinus.html=UTF-8
 encoding/tags.html=UTF-8
+encoding/twitter.html=UTF-8
